crates/glyph-cli/tests/corpus/invalid/flow_assign_truly_unknown.glyph
block inspect_repo(scope = ".") -> Report
    description: "Inspect the repo."
    flow:
        "Examine {scope}."
        return context

skill diagnose(scope = ".") -> Report
    description: "Reference a name that is never bound."
    flow:
        ctx = inspect_repo(scope)
        "Summarize {never_bound}."
        return ctx
